theme: fix alignment of tags in rtl #364

--- a/static/css/ie.css
+++ b/static/css/ie.css
@@ -451,6 +451,7 @@
 	#body .tags a.tag-link {
 		background-color: #7dc903; /* var(--TAG-BG-color) */
 		color: #ffffff; /* var(--MAIN-BG-color) */
+		margin-right: 16px;
 	}
 
 	#body .tags a.tag-link:before {
